--- a/src/main/resources/templates/book-view/book.html
+++ b/src/main/resources/templates/book-view/book.html
@@ -1,100 +1,106 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Hệ thống quản lý thư viện</title>
-  <!--    <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css}">-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta charset="UTF-8">
+    <title>Hệ thống quản lý thư viện</title>
+    <!--    <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css}">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="nav-link" th:href="@{/logout}">Logout</a>
-    </li>
-  </ul>
+    <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/logout}">Logout</a>
+        </li>
+    </ul>
 </nav>
 <div class="container">
 
-  <div class="row mt-4">
-    <div class="col-md-2.5">
-      <div class="list-group">
-        <a th:href="@{/home/books}"  class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý sách</b>
-        </a>
-        <a th:href="@{/home/find-book}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-search mr-2"></i> Tìm sách
-        </a>
-        <a th:href="@{/home/add-book}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-plus mr-2"></i> Thêm sách
-        </a>
-        <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-home mr-2"></i> Quay lại trang chủ
-        </a>
-      </div>
-    </div>
-    <div class="col-md-9">
-      <div class="content">
-        <div class="row mt-4">
-          <div class="col-md-12">
-            <table class="table table-striped">
-              <div>
-                Show:
-                <a id="pageSize" th:text="${books.getSize()}"></a>
-              </div>
-              <thead>
-              <tr>
-                <th>STT</th>
-                <th>Mã Code</th>
-                <th>Tên sách</th>
-                <th>Tác giả</th>
-                <th>Thể loại</th>
-                <th>Số lượng</th>
-                <th>Đang mượn</th>
-                <th>Actions</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr th:each="book, index : ${books}">
-                <td th:text="${index.index + 1}">1</td>
-                <td th:text="${book.bookCode}"></td>
-                <td th:text="${book.nameBook}"></td>
-                <td th:text="${book.author}"></td>
-                <td th:text="${book.category}"></td>
-                <td th:text="${book.totalNumber}"></td>
-                <td th:text="${book.remainingNumber}"></td>
-
-                <td>
-                  <a href="#" class="btn btn-primary btn-sm">Sửa</a>
-                  <a href="#" class="btn btn-danger btn-sm">Xóa</a>
-                </td>
-              </tr>
-              <!-- Các dòng dữ liệu sách khác -->
-              </tbody>
-            </table>
-            <div class="d-flex justify-content-end">
-              <nav aria-label="Page navigation example">
-                <ul class="pagination">
-                  <li class="page-item"><a class="page-link" id="previous-link" th:if="${books.getNumber() > 0}"
-                                           th:href="@{books(pageNo=${books.getNumber() - 1})}">Previous</a></li>
-                  <li class="page-item"><a class="page-link" th:text="${books.getNumber() +1}" id="pageNo"> </a></li>
-                  <li class="page-item"><a class="page-link " id="next-link"
-                                           th:if="${books.getNumber()} < ${books.getTotalPages() -1}"
-                                           th:href="@{books(pageNo=${books.getNumber()+1})}">Next</a></li>
-                </ul>
-              </nav>
+    <div class="row mt-4">
+        <div class="col-md-2.5">
+            <div class="list-group">
+                <a th:href="@{/home/books}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý sách</b>
+                </a>
+                <a th:href="@{/home/find-book}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-search mr-2"></i> Tìm sách
+                </a>
+                <a th:href="@{/home/add-book}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-plus mr-2"></i> Thêm sách
+                </a>
+                <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-home mr-2"></i> Quay lại trang chủ
+                </a>
             </div>
-          </div>
         </div>
-      </div>
+        <div class="col-md-9">
+            <div class="content">
+                <div class="row mt-4">
+                    <div class="col-md-12">
+                        <table class="table table-striped">
+                            <div>
+                                Show:
+                                <a id="pageSize" th:text="${books.getSize()}"></a>
+                            </div>
+                            <thead>
+                            <tr>
+                                <th>STT</th>
+                                <th>Mã Code</th>
+                                <th>Tên sách</th>
+                                <th>Tác giả</th>
+                                <th>Thể loại</th>
+                                <th>Số lượng</th>
+                                <th>Đang mượn</th>
+                                <th>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="book, index : ${books}">
+                                <td th:text="${index.index + 1 } + ${books.getNumber()}*${books.getSize()}">1</td>
+                                <td th:text="${book.bookCode}"></td>
+                                <td th:text="${book.nameBook}"></td>
+                                <td th:text="${book.author}"></td>
+                                <td th:text="${book.category}"></td>
+                                <td th:text="${book.totalNumber}"></td>
+                                <td th:text="${book.remainingNumber}"></td>
+
+                                <td>
+                                    <a href="#" class="btn btn-primary btn-sm">Sửa</a>
+                                    <a href="#" class="btn btn-danger btn-sm">Xóa</a>
+                                </td>
+                            </tr>
+                            <!-- Các dòng dữ liệu sách khác -->
+                            </tbody>
+                        </table>
+                        <div class="d-flex justify-content-end">
+                            <nav aria-label="Page navigation example">
+                                <ul class="pagination">
+                                    <li class="page-item"><a class="page-link" id="previous-link"
+                                                             th:if="${books.getNumber() > 0}"
+                                                             th:href="@{books(pageNo=${books.getNumber() - 1})}">Previous</a>
+                                    </li>
+                                    <li class="page-item"><a class="page-link" th:text="${books.getNumber() +1}"
+                                                             id="pageNo"> </a></li>
+                                    <li class="page-item"><a class="page-link " id="next-link"
+                                                             th:if="${books.getNumber()} < ${books.getTotalPages() -1}"
+                                                             th:href="@{books(pageNo=${books.getNumber()+1})}">Next</a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 
