--- a/src/main/resources/templates/book-view/book.html
+++ b/src/main/resources/templates/book-view/book.html
@@ -27,13 +27,13 @@
     <div class="row mt-4">
         <div class="col-md-2.5">
             <div class="list-group">
-                <a th:href="@{/home/books}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/book/books}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý sách</b>
                 </a>
-                <a th:href="@{/home/find-book}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/book/find-book}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-search mr-2"></i> Tìm sách
                 </a>
-                <a th:href="@{/home/add-book}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/book/add-book}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-plus mr-2"></i> Thêm sách
                 </a>
                 <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
