--- a/src/main/resources/templates/book-view/find-book.html
+++ b/src/main/resources/templates/book-view/find-book.html
@@ -27,15 +27,15 @@
     <div class="row mt-4">
         <div class="col-md-2.5">
             <div class="list-group">
-                <a th:href="@{/home/books}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/book/books}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-book mr-2 "></i>
                     Quản lý sách
                 </a>
 
-                <a th:href="@{/home/find-book}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/book/find-book}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-search mr-2 text-primary"></i> <b class="text-primary">Tìm sách</b>
                 </a>
-                <a th:href="@{/home/add-book}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/book/add-book}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-plus mr-2"></i> Thêm sách
                 </a>
                 <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
@@ -47,7 +47,7 @@
             <h3 class="mt-4">Tìm kiếm sách</h3>
             <div class="row mt-4">
                 <div class="col-md-6">
-                    <form th:action="@{/home/find-book}" method="post">
+                    <form th:action="@{/home/book/find-book}" method="post">
                         <div class="input-group mb-3">
                             <input type="text" class="form-control" th:value="${keyword}" name="keyword" placeholder="Nhập tên sách, tác giả, hoặc thể loại">
                             <div class="input-group-append">
