--- a/src/main/resources/templates/reader-view/add-reader.html
+++ b/src/main/resources/templates/reader-view/add-reader.html
@@ -7,7 +7,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -23,17 +25,17 @@
     <div class="row mt-4">
         <div class="col-md-2.5">
             <div class="list-group">
-                <a th:href="@{/home/readers}"  class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý độc giả</b>
+                <a th:href="@{/home/reader/readers}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-book mr-2"></i>Quản lý độc giả
                 </a>
-                <a th:href="@{/home/find-reader}" class="list-group-item list-group-item-action border-0">
+                <a th:href="@{/home/reader/find-reader}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-search mr-2"></i> Tìm kiếm độc giả
                 </a>
-                <a th:href="@{/home/add-reader}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-plus mr-2"></i> Đăng ký độc giả mới
+                <a th:href="@{/home/reader/add-reader}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-plus mr-2 text-primary"></i><b class="text-primary">Đăng ký độc giả mới</b>
                 </a>
-                <a th:href="@{/home/history}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-history mr-2"></i> Lịch sử mượn - trả sách
+                <a th:href="@{/home/reader/history}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-history mr-2"></i> Lịch sử mượn sách
                 </a>
                 <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
                     <i class="fas fa-home mr-2"></i> Quay lại trang chủ
@@ -41,7 +43,7 @@
             </div>
         </div>
         <div class="col-md-9">
-            <h3 class="mt-4">Thêm sách</h3>
+            <h3 class="mt-4">Điền thông tin độc giả</h3>
             <div th:if="${successMsg}!= null" class="alert alert-success alert-dismissible">
                 <button type="button" class="close" data-dismiss="alert">×</button>
                 <strong th:text="${successMsg}"></strong>
@@ -53,26 +55,30 @@
             </div>
             <div class="row mt-4">
                 <div class="col-md-6">
-                    <form method="post" th:action="@{/home/add-reader}">
+                    <form method="post" th:action="@{/home/reader/add-reader}" id="formReader">
                         <div class="mb-3">
                             <label for="fullName" class="form-label">Họ tên</label>
-                            <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Nhập mã sách">
+                            <input type="text" class="form-control" id="fullName" name="fullName"
+                                   placeholder="Nhập họ tên đầy đủ">
                         </div>
                         <div class="mb-3">
                             <label for="birthday" class="form-label">Ngày sinh</label>
-                            <input type="text" class="form-control" id="birthday" name="birthday" placeholder="Nhập tên sách">
+                            <input type="date" class="form-control" id="birthday" name="birthday" placeholder="">
                         </div>
                         <div class="mb-3">
                             <label for="cccd" class="form-label">CCCD</label>
-                            <input type="text" class="form-control" id="cccd" name="cccd" placeholder="Nhập tên tác giả">
+                            <input type="text" class="form-control" id="cccd" name="cccd"
+                                   placeholder="Nhập căn cước công dân">
                         </div>
                         <div class="mb-3">
                             <label for="phoneNumber" class="form-label">SĐT</label>
-                            <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="Nhập tên thể loại">
+                            <input type="text" class="form-control" id="phoneNumber" name="phoneNumber"
+                                   placeholder="Nhập số điện thoại">
                         </div>
                         <div class="mb-3">
                             <label for="address" class="form-label">Địa chỉ</label>
-                            <input type="number" class="form-control" id="address" name="address" placeholder="Nhập số lượng">
+                            <input type="text" class="form-control" id="address" name="address"
+                                   placeholder="Nhập địa chỉ thường trú">
                         </div>
                         <button type="submit" class="btn btn-primary">Đăng ký</button>
                     </form>
@@ -82,5 +88,37 @@
     </div>
 </div>
 </body>
+<script>
+    $(document).ready(function () {
+        $('#formReader').validate({rules: {
+                fullName: {
+                    required: true
 
+                },
+                birthday: {
+                    required: true
+                },
+                cccd: {
+                    required: true
+                },
+                phoneNumber: {
+                    required: true
+                },
+                address: {
+                    required: true
+                }
+
+            }, messages: {
+                fullName: {
+                    required: 'Vui lòng nhập họ tên'
+                },
+                birthday: {required: 'Vui lòng nhập ngày sing'},
+                cccd: {required: 'vui lòng nhập CCCD'},
+                phoneNumber: {required: 'Vui lòng nhập số điện thoại'},
+                address: {required: 'Vui lòng nhập địa chỉ'}
+            }, submitHandler: function(form) {
+                form.submitHandler();
+            }})
+    })
+</script>
 </html>
