sắp xong part 2

--- a/src/main/resources/templates/slip-view/create-loan.html
+++ b/src/main/resources/templates/slip-view/create-loan.html
@@ -95,8 +95,9 @@
                     </table>
                 </div>
             </form>
-            <button type="button" onclick="creatLoanSlip()" class="btn btn-primary">Đăng ký mượn</button>
-            <button class="btn btn-primary" type="button" onclick="window.location.reload();">Tải lại trang</button>
+            <form>
+                <button type="button" onclick="creatLoanSlip()" class="btn btn-primary">Đăng ký mượn</button>
+                <button class="btn btn-primary" type="button" onclick="window.location.reload();">Tải lại trang</button>
             </form>
         </div>
 
