--- a/src/main/resources/templates/slip-view/loan-slip.html
+++ b/src/main/resources/templates/slip-view/loan-slip.html
@@ -57,7 +57,7 @@
                                 <th>Ngày mượn</th>
                                 <th>Hạn mượn</th>
                                 <th>Trạng thái</th>
-                                <th>Người lập</th>
+                                <th>Thủ thư</th>
                             </tr>
                             </thead>
                             <tbody>
