--- a/src/main/resources/templates/slip-view/find-pay.html
+++ b/src/main/resources/templates/slip-view/find-pay.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Hệ thống quản lý thư viện</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" th:href="@{/logout}">Logout</a>
+        </li>
+    </ul>
+</nav>
 
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-md-2.5">
+            <div class="list-group">
+                <a th:href="@{/home/pay-slip/pay-slips}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý trả sách</b>
+                </a>
+                <a th:href="@{/home/pay-slip/create-pay}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-plus mr-2"></i> Trả sách
+                </a>
+                <a th:href="@{/home/pay-slip/find-pay}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-search mr-2"></i> Tìm kiếm
+                </a>
+
+                <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
+                    <i class="fas fa-home mr-2"></i> Quay lại trang chủ
+                </a>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <h3 class="mt-4">Tìm kiếm phiếu trả sách</h3>
+            <div class="row mt-4">
+                <div class="col-md-9">
+                    <form th:action="@{/home/loan-slip/find-loan}" method="post">
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" th:value="${idPay}" name="id" placeholder="mã phiếu trả">
+                            <input type="text" class="form-control" th:value="${idLoan}" name="idReader" placeholder="mã phiếu mượn">
+                            <div class="input-group-append">
+                                <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i> Tìm kiếm
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="content">
+                <div class="row mt-4">
+                    <div class="col-md-12">
+                        <table class="table table-striped">
+
+                            <thead>
+                            <tr>
+                                <th>Mã trả</th>
+                                <th>Mã mượn</th>
+                                <th>Danh sách trả</th>
+                                <th>Ngày trả</th>
+                                <th>Thủ thư</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="paySlip: ${paySlips}">
+                                <td th:text="${paySlip.id}"></td>
+                                <td><a th:text="${paySlip.idLoanSlip}" id="idSlip" onclick="loadLoanSlip()"></a></td>
+                                <td th:text="${paySlip.books}"></td>
+                                <td th:text="${paySlip.createDate}"></td>
+                                <td th:text="${paySlip.id}"></td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+<script>
+    function loadLoanSlip() {
+        var idSlip = $("#idSlip").text();
+        alert(idSlip);
+        $.post({
+            url: "/api/pay-slip/find-loan-slip",
+            dataType: "json",
+            contentType: "application/json",
+            data: idSlip,
+            success: function (response) {
+                console.log(response);
+                var msg = "";
+                msg += "Mã phiếu mượn: " + response.id;
+                msg += "\nNgười lập phiếu (thủ thư): " + response.librarian.fullName;
+                msg += "\nNgười mượn (độc giả): " + response.reader.fullName;
+                msg += "\nNgày mượn: " + response.createDate;
+                msg += "\nHạn mượn: " + response.dueDate;
+                msg += "\nDanh sách mượn: ";
+                var books = response.bookSet;
+                for (var i = 0; i < books.length; i++) {
+                    msg += '(' + books[i].bookCode + ')' + books[i].nameBook + ';';
+                }
+                msg += "Trạng thại: " + response.status;
+                alert(msg);
+
+
+            },
+            error: function (xhr) {
+                alert("Phiếu mượn không tồn tại.");
+                console.log(xhr);
+            }
+        })
+    }
+</script>
 </html>
